src/components/FootBar/FootBar.module.css
.footbar {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 60px;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.fa-solid {
    color: #cacfd2;
}

.fa-solid.active {
    color: #ff7f50;
}

.icon-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.icon-list li {
    margin: 0;
    user-select: none;
}

.icon-list button {
    position: relative;
    padding: 10px 20px;
    background-color: transparent;
    border: none;
    cursor: pointer;
    overflow: hidden;
    border-radius: 15px;
}

.icon-list button::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 60%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.1);
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
    z-index: -1;
    border-radius: inherit;
}

.icon-list button:hover::after {
    opacity: 1;
}

